--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -7,7 +7,7 @@ advanced_options=false
 dedicated_server=false
 custom_features=""
 export_filter="all_resources"
-include_filter=""
+include_filter="*.lvl.txt"
 exclude_filter=""
 export_path="export/android/wallsnballs.apk"
 encryption_include_filters=""
@@ -215,7 +215,7 @@ advanced_options=false
 dedicated_server=false
 custom_features=""
 export_filter="all_resources"
-include_filter=""
+include_filter="*.lvl.txt"
 exclude_filter=""
 export_path="export/linux/wallsnballs.x86_64"
 encryption_include_filters=""
@@ -255,7 +255,7 @@ advanced_options=false
 dedicated_server=false
 custom_features=""
 export_filter="all_resources"
-include_filter=""
+include_filter="*.lvl.txt"
 exclude_filter=""
 export_path="export/web/index.html"
 encryption_include_filters=""
